# notes-supply-site

./: .dockerignore  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  index.html  package-lock.json  package.json
.githooks/: pre-push
.github/workflows/: ci.yml  secret-scan.yml
public/app/: home.js  ui.js
public/assets/: style.css
scripts/: install-hooks.sh  scan-github-secrets.sh
src/: app.rs  client_api.rs  data.rs  github.rs  lib.rs  main.rs  server.rs  server_main.rs  types.rs
src/components/: footer.rs  hero.rs  mod.rs  terminal_intro.rs
src/pages/: mod.rs  project_detail.rs  projects.rs
style/: input.css
