[package]
name = "notes-supply"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dioxus = { version = "=0.7.3", features = ["router", "web"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
thiserror = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.6", features = ["http"] }
web-sys = { version = "0.3", features = ["Window", "Location", "Navigator"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-gzip", "fs", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
server = []

[[bin]]
name = "notes-supply-server"
path = "src/server_main.rs"
required-features = ["server"]
